fix: (CXSPA-8764) - Cropped focus ring (#19586)

--- a/feature-libs/cart/base/styles/components/_cart-item-list.scss
+++ b/feature-libs/cart/base/styles/components/_cart-item-list.scss
@@ -52,6 +52,11 @@
     grid-template-columns: 5rem 14rem;
     gap: 1rem;
     text-indent: 0;
+    @include forFeature('a11yCroppedFocusRing') {
+      a {
+        height: fit-content;
+      }
+    }
   }
 
   .cx-name {
